--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,10 @@
 name = "search-rs"
 version = "0.1.0"
 edition = "2021"
+
+[lib]
+name = "search"
+path = "src/lib.rs"
+
+[dependencies]
+rand = "0.8"
