--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ path = "src/lib.rs"
 rand = "0.8"
 tokenizers = { version = "0.15.0", features = ["http"] }
 rust-stemmers = "1.2.0"
+rayon = "1.8.0"
