--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokenizers = { version = "0.15.0", features = ["http"] }
 rust-stemmers = "1.2.0"
 rayon = "1.8.0"
 indicatif = {version = "0.17.0", features = ["rayon", "improved_unicode"]}
+fxhash = "0.2.1"
