--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.4.1"
+askama = "0.12.1"
+axum = "0.7.4"
+env_logger = "0.11.0"
+log = "0.4.20"
 search = { path = "../search" }
 serde = "1.0.195"
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
