--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { version = "0.7.4", features = ["macros"] }
 askama = "0.12.1"
-axum = "0.7.4"
 env_logger = "0.11.0"
 log = "0.4.20"
 search = { path = "../search" }
-serde = "1.0.195"
+serde = { version = "1.0.195", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
