--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Fmt
-      run: cargo fmt --check
+      run: cargo fmt --verbose
+    - name: Clippy
+      run: cargo clippy --verbose
     - name: Build
       run: cargo build --verbose
     - name: Run tests
