--- a/search/Cargo.toml
+++ b/search/Cargo.toml
@@ -12,3 +12,4 @@ indicatif = { version = "0.17.0", features = ["rayon", "improved_unicode"] }
 fxhash = "0.2.1"
 tempdir = "0.3.7"
 regex = "1"
+argparse = "0.2.2"
